noinst_LTLIBRARIES = librfg.la

INCLUDES = -I$(top_srcdir)/include -I$(top_builddir)/include

librfg_la_CFLAGS = -static -prefer-pic
librfg_la_LDFLAGS = -static
librfg_la_SOURCES = \
	rfg.h \
	rfg_filter.h \
	rfg_groups.h \
	rfg_regions.h \
	rfg_filter.c \
        rfg_groups.c \
        rfg_regions.c

